app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 */

@import "bootstrap-sprockets";
@import "bootstrap";
@import "home";
@import "social-share-button";

$size: 24px;
$fbi: image-url("facebook.png");
$fbi-w: 14px;
$fbi-h: 25px;

$ti: image-url("twitter.png");
$ti-w: 31px;



.social-share-button {
  .ssb-icon {
    background-size: $fbi-w $fbi-h;
    height: $fbi-h;
    width: $fbi-w;
    margin-left: 10px;
  }
  .ssb-twitter{
    background-image: $ti;
    background-size: $ti-w $fbi-h;
    height: $fbi-h;
    width: $ti-w;
  }

  .ssb-facebook{
    background-image: $fbi;
  }
}

@media screen
  and (device-width: 360px)
  and (device-height: 640px)
  and (-webkit-device-pixel-ratio: 3)
  and (orientation: portrait) {
  /* line 10, /Users/Amani/.rvm/gems/ruby-2.3.0/gems/bootstrap-sass-3.3.7/assets/stylesheets/bootstrap/_grid.scss */
  .container {
    width: 95%;
  }

  .all-peegin {
    margin-top: 195px;
  }
}

